# dMatrix_v1

./: CMakeLists.txt  Makefile  README.md  main  main.c
inc/: complex.h  dComplex.h  matrix.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
src/: CMakeLists.txt  complex.c  dComplex.c  matrix.c
